--- a/Extent.html
+++ b/Extent.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">MyApp</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 29, 2024 09:22:05 PM</span></a>
+<a href="#"><span class="badge badge-primary">May 31, 2024 05:51:37 PM</span></a>
 </li>
 </ul>
 </div>
@@ -114,7 +114,7 @@
           <div class="test-detail">
             <p class="name">invalidUsername</p>
             <p class="text-sm">
-              <span>9:22:06 PM</span> / <span>00:00:00:000</span>
+              <span>5:51:37 PM</span> / <span>00:00:09:057</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -123,9 +123,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">invalidUsername</h5>
-<span class='badge badge-success'>05.29.2024 9:22:06 PM</span>
-<span class='badge badge-danger'>05.29.2024 9:22:06 PM</span>
-<span class='badge badge-default'>00:00:00:000</span>
+<span class='badge badge-success'>05.31.2024 5:51:37 PM</span>
+<span class='badge badge-danger'>05.31.2024 5:51:46 PM</span>
+<span class='badge badge-default'>00:00:09:057</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -136,16 +136,30 @@
 <span class="badge badge-pill badge-default">Android</span></div>
 <div class="m-t-10 m-l-5">Invalid login test</div>
 </div>
-</div>          </div>
+</div><div class="detail-body mt-4">
+<table class="table table-sm">
+  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
+  <tbody>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>5:51:46 PM</td>
+        <td>
+          Test Passed
+        </td>
+      </tr>
+  </tbody>
+</table>
+</div>
+          </div>
         </li>
         <li class="test-item"  status="pass" test-id="2"
           author="Bogi"
           tag="null_null"
           device="Android">
           <div class="test-detail">
-            <p class="name">invalidUsername</p>
+            <p class="name">validLogin</p>
             <p class="text-sm">
-              <span>9:22:06 PM</span> / <span>00:00:00:000</span>
+              <span>5:51:47 PM</span> / <span>00:00:05:241</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -153,10 +167,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">invalidUsername</h5>
-<span class='badge badge-success'>05.29.2024 9:22:06 PM</span>
-<span class='badge badge-danger'>05.29.2024 9:22:06 PM</span>
-<span class='badge badge-default'>00:00:00:000</span>
+<h5 class="test-status text-pass">validLogin</h5>
+<span class='badge badge-success'>05.31.2024 5:51:47 PM</span>
+<span class='badge badge-danger'>05.31.2024 5:51:52 PM</span>
+<span class='badge badge-default'>00:00:05:241</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -165,9 +179,23 @@
 <div class="m-t-15"><span class="badge badge-pill badge-default">Bogi</span>
 <span class="badge badge-pill badge-default">null_null</span>
 <span class="badge badge-pill badge-default">Android</span></div>
-<div class="m-t-10 m-l-5">Invalid login test</div>
+<div class="m-t-10 m-l-5">Valid login test</div>
 </div>
-</div>          </div>
+</div><div class="detail-body mt-4">
+<table class="table table-sm">
+  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
+  <tbody>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>5:51:52 PM</td>
+        <td>
+          Test Passed
+        </td>
+      </tr>
+  </tbody>
+</table>
+</div>
+          </div>
         </li>
       </ul>
     </div>
@@ -210,16 +238,16 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>21:22:06 PM</td>
+<td>17:51:37 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='1'>invalidUsername</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>21:22:06 PM</td>
+<td>17:51:47 PM</td>
 <td>
-<a href="#" class="linked" test-id='2' id='2'>invalidUsername</a>
+<a href="#" class="linked" test-id='2' id='2'>validLogin</a>
 </td>
 </tr>
 </tbody>
@@ -266,16 +294,16 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>21:22:06 PM</td>
+<td>17:51:37 PM</td>
 <td>
-<a href="#" class="linked" test-id='2' id='2'>invalidUsername</a>
+<a href="#" class="linked" test-id='1' id='1'>invalidUsername</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>21:22:06 PM</td>
+<td>17:51:47 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='1'>invalidUsername</a>
+<a href="#" class="linked" test-id='2' id='2'>validLogin</a>
 </td>
 </tr>
 </tbody>
@@ -322,16 +350,16 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>21:22:06 PM</td>
+<td>17:51:37 PM</td>
 <td>
-<a href="#" class="linked" test-id='2' id='2'>invalidUsername</a>
+<a href="#" class="linked" test-id='1' id='1'>invalidUsername</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>21:22:06 PM</td>
+<td>17:51:47 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='1'>invalidUsername</a>
+<a href="#" class="linked" test-id='2' id='2'>validLogin</a>
 </td>
 </tr>
 </tbody>
@@ -351,13 +379,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 29, 2024 09:22:05 PM</h3>
+<h3>May 31, 2024 05:51:37 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 29, 2024 09:22:06 PM</h3>
+<h3>May 31, 2024 05:51:53 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -397,6 +425,26 @@
 </div>
 </div>
 </div>
+<div class="col-md-6">
+<div class="card">
+<div class="card-header">
+<h6 class="card-title">Log events</h6>
+</div>
+<div class="card-body">
+<div class="">
+<canvas id='events-analysis' width='115' height='90'></canvas>
+</div>
+</div>
+<div class="card-footer">
+<div><small data-tooltip='100%'><b>2</b> events passed</small></div>
+<div>
+<small data-tooltip='0%'><b>0</b> events failed,
+<b data-tooltip='%'>0</b> others
+</small>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div class="row"><div class="col-md-12">
 <div class="card"><div class="card-header"><p>Timeline</p></div>
@@ -407,7 +455,7 @@
 </div></div>
 <script>
 var timeline = {
-"invalidUsername":0,"invalidUsername":0
+"invalidUsername":9.057,"validLogin":5.241
 };
 </script>
 <div class="row">
@@ -486,7 +534,7 @@ warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
-passEvents: 0,
+passEvents: 2,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
